fixed the home page background image to only cover the window without overflow

--- a/src/components/homepage.css
+++ b/src/components/homepage.css
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 body {
-  background-image: url("https://images.unsplash.com/photo-1511370235399-1802cae1d32f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=855&q=80");
+  background: url("https://images.unsplash.com/photo-1511370235399-1802cae1d32f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=855&q=80") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  height: 100vh;
+
 }
 
 
@@ -13,6 +14,7 @@ body {
   text-align: center;
   margin: center;
   margin-top: 25vh;
+
 }
 
 .shop-welcome {
@@ -26,7 +28,7 @@ body {
   font-size: 30pt;
   font-weight: 900;
 
-  background-color:  rgb(72, 22, 22);
+  background-color: rgb(72, 22, 22);
   backdrop-filter: blur(5px);
   box-shadow: 0 0 16px rgba(69, 69, 69, 0.594);
 
@@ -34,16 +36,15 @@ body {
 }
 
 .shop-button {
-
   color: white;
-  margin: 1em;
+  margin-top: 1em;
   width: 8em;
   padding: 0.25rem 2rem;
   border: none;
   font-size: 18pt;
   border-radius: 1em;
   font-weight: 900;
-  background-color:  rgb(72, 22, 22);
+  background-color: rgb(72, 22, 22);
   backdrop-filter: blur(5px);
   box-shadow: 0 0 16px rgba(69, 69, 69, 0.594);
 }
